--- a/project/package.json
+++ b/project/package.json
@@ -13,8 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.4",
     "@supabase/supabase-js": "^2.39.8",
     "@tabler/icons-react": "^3.0.0",
+    "firebase": "^10.14.1",
     "framer-motion": "^11.0.18",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -23,7 +25,7 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.30.0",
-    "firebase":"^10.7.1"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
